# financial-administrator

./: Dockerfile  README.md  constraints.txt  docker-compose.yml
.github/workflows/: ci.yml
src/dashboard/: app.py
web/: pyproject.toml
web/src/dashboard/: app.py
web/tests/unit/: test_app.py
