[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-adm"
version = "1.0.0"
dependencies = [
    "FastAPI",
    "redis",
    "uvicorn",
    "httpx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "bandit",
    "black",
    "flake8",
    "isort",
    "pylint"
]